Fix toast notification container overflowing

--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -231,7 +231,6 @@ body {
     gap: 32px;
 
     width: 100%;
-    height: 100vh;
     padding: 32px 0;
 
     overflow: hidden;
